# KleleAtoms-PSP

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build_clean.sh  build_debug.sh  build_release.sh  build_release_signed.sh
paktool/: kpaktool.py  pakutils.py
res/: resources.pak
src/: main.c
src/game/: assetman.c  assetman.h  fade.c  fade.h  game.c  game.h  save.c  save.h  state.c  state.h
src/states/game/: gameai.c  gameai.h  gamedraw.c  gamedraw.h  gamelogic.c  gamelogic.h  gamestate.c  gamestate.h  gametutorial.c  gametutorial.h
src/states/menu/: menuatoms.c  menuatoms.h  menustate.c  menustate.h  menuui.c  menuui.h
src/utils/: pakread.c  pakread.h  pspwav.c  pspwav.h  rendertext.c  rendertext.h  timer.c  timer.h  wavplayer.c  wavplayer.h  wavplayermix.c  wavplayerpsp.c
